hard-gists/dbec2584e7508cbfc79e/run.log
=== Docker Run Log for dbec2584e7508cbfc79e ===
Started at: Mi 29. Okt 20:32:25 CET 2025

[2025-10-29 20:32:26] START: Running container for dbec2584e7508cbfc79e
[2025-10-29 20:32:26] SUCCESS: Container 5a7f5888b1cf30139b27bea0088077e79046727a81a165762c97db968897cf5f started for dbec2584e7508cbfc79e
=== Container logs for dbec2584e7508cbfc79e ===
  File "/snippet.py", line 25
    except Exception, e:
           ^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for dbec2584e7508cbfc79e ===
[2025-10-29 20:32:28] INFO: Container 5a7f5888b1cf30139b27bea0088077e79046727a81a165762c97db968897cf5f has stopped
